--- a/internal/site/src/locales/he/he.po
+++ b/internal/site/src/locales/he/he.po
@@ -1199,6 +1199,11 @@ msgstr "Tokens מאפשרים לסוכנים להתחבר ולהירשם. טבי
 msgid "Tokens and fingerprints are used to authenticate WebSocket connections to the hub."
 msgstr "Tokens וטביעות אצבע משמשים לאימות חיבורי WebSocket ל-hub."
 
+#: src/components/ui/chart.tsx
+#: src/components/ui/chart.tsx
+msgid "Total"
+msgstr "כולל"
+
 #: src/components/routes/system/network-sheet.tsx
 msgid "Total data received for each interface"
 msgstr "סך נתונים שהתקבלו עבור כל ממשק"
