--- a/internal/site/src/locales/es/es.po
+++ b/internal/site/src/locales/es/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: es\n"
 "Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-11-01 17:41\n"
+"PO-Revision-Date: 2025-11-04 22:13\n"
 "Last-Translator: \n"
 "Language-Team: Spanish\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -123,7 +123,7 @@ msgstr "Agente"
 #: src/components/routes/settings/alerts-history-data-table.tsx
 #: src/components/routes/settings/layout.tsx
 msgid "Alert History"
-msgstr "Historial de Alertas"
+msgstr "Historial de alertas"
 
 #: src/components/alerts/alert-button.tsx
 #: src/components/alerts/alerts-sheet.tsx
@@ -142,7 +142,7 @@ msgstr "Todos los contenedores"
 #: src/components/systems-table/systems-table.tsx
 #: src/components/systems-table/systems-table.tsx
 msgid "All Systems"
-msgstr "Todos los Sistemas"
+msgstr "Todos los sistemas"
 
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Are you sure you want to delete {name}?"
@@ -746,7 +746,7 @@ msgstr "Instrucciones manuales de configuración"
 #. Chart select field. Please try to keep this short.
 #: src/components/routes/system.tsx
 msgid "Max 1 min"
-msgstr "Máx 1 min"
+msgstr "Máx. 1 min"
 
 #: src/components/containers-table/containers-table-columns.tsx
 #: src/components/systems-table/systems-table-columns.tsx
@@ -756,11 +756,15 @@ msgstr "Memoria"
 #: src/components/routes/system.tsx
 #: src/lib/alerts.ts
 msgid "Memory Usage"
-msgstr "Uso de Memoria"
+msgstr "Uso de memoria"
 
 #: src/components/routes/system.tsx
 msgid "Memory usage of docker containers"
-msgstr "Uso de memoria de los contenedores de Docker"
+msgstr "Uso de memoria de los contenedores Docker"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Model"
+msgstr "Modelo"
 
 #: src/components/routes/system/smart-table.tsx
 msgid "Model"
@@ -779,7 +783,7 @@ msgstr "Red"
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
-msgstr "Tráfico de red de los contenedores de Docker"
+msgstr "Tráfico de red de los contenedores Docker"
 
 #: src/components/routes/system.tsx
 #: src/components/routes/system/network-sheet.tsx
@@ -897,7 +901,7 @@ msgstr "Pausado ({pausedSystemsLength})"
 #: src/components/routes/system/cpu-sheet.tsx
 #: src/components/routes/system/cpu-sheet.tsx
 msgid "Per-core average utilization"
-msgstr "Utilización promedio por núcleo"
+msgstr "Uso promedio por núcleo"
 
 #: src/components/routes/system/cpu-sheet.tsx
 msgid "Percentage of time spent in each state"
@@ -905,36 +909,36 @@ msgstr "Porcentaje de tiempo dedicado a cada estado"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
-msgstr "Por favor, <0>configure un servidor SMTP</0> para asegurar que las alertas sean entregadas."
+msgstr "Por favor, <0>configura un servidor SMTP</0> para asegurar que las alertas sean entregadas."
 
 #: src/components/alerts/alerts-sheet.tsx
 msgid "Please check logs for more details."
-msgstr "Por favor, revise los registros para más detalles."
+msgstr "Por favor, revisa los registros para más detalles."
 
 #: src/components/login/auth-form.tsx
 #: src/components/login/forgot-pass-form.tsx
 msgid "Please check your credentials and try again"
-msgstr "Por favor, verifique sus credenciales e intente de nuevo"
+msgstr "Por favor, verifica tus credenciales e inténtalo de nuevo"
 
 #: src/components/login/login.tsx
 msgid "Please create an admin account"
-msgstr "Por favor, cree una cuenta de administrador"
+msgstr "Por favor, crea una cuenta de administrador"
 
 #: src/components/login/auth-form.tsx
 msgid "Please enable pop-ups for this site"
-msgstr "Por favor, habilite las ventanas emergentes para este sitio"
+msgstr "Por favor, habilita las ventanas emergentes para este sitio"
 
 #: src/lib/api.ts
 msgid "Please log in again"
-msgstr "Por favor, inicie sesión de nuevo"
+msgstr "Por favor, inicia sesión de nuevo"
 
 #: src/components/login/auth-form.tsx
 msgid "Please see <0>the documentation</0> for instructions."
-msgstr "Por favor, consulte <0>la documentación</0> para obtener instrucciones."
+msgstr "Por favor, consulta <0>la documentación</0> para obtener instrucciones."
 
 #: src/components/login/login.tsx
 msgid "Please sign in to your account"
-msgstr "Por favor, inicie sesión en su cuenta"
+msgstr "Por favor, inicia sesión en tu cuenta"
 
 #: src/components/add-system.tsx
 msgid "Port"
@@ -952,12 +956,12 @@ msgstr "Utilización precisa en el momento registrado"
 
 #: src/components/routes/settings/general.tsx
 msgid "Preferred Language"
-msgstr "Idioma Preferido"
+msgstr "Idioma preferido"
 
 #. Use 'Key' if your language requires many more characters
 #: src/components/add-system.tsx
 msgid "Public Key"
-msgstr "Clave Pública"
+msgstr "Clave pública"
 
 #. Disk read
 #: src/components/routes/system.tsx
@@ -984,7 +988,7 @@ msgstr "Solicitar OTP"
 
 #: src/components/login/forgot-pass-form.tsx
 msgid "Reset Password"
-msgstr "Restablecer Contraseña"
+msgstr "Restablecer contraseña"
 
 #: src/components/alerts-history-columns.tsx
 #: src/components/alerts-history-columns.tsx
@@ -1014,7 +1018,7 @@ msgstr "Autoprueba S.M.A.R.T."
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Save address using enter key or comma. Leave blank to disable email notifications."
-msgstr "Guarde la dirección usando la tecla enter o coma. Deje en blanco para desactivar las notificaciones por correo."
+msgstr "Guarda la dirección usando la tecla enter o coma. Deja en blanco para desactivar las notificaciones por correo."
 
 #: src/components/routes/settings/general.tsx
 #: src/components/routes/settings/notifications.tsx
@@ -1035,7 +1039,7 @@ msgstr "Buscar sistemas o configuraciones..."
 
 #: src/components/alerts/alerts-sheet.tsx
 msgid "See <0>notification settings</0> to configure how you receive alerts."
-msgstr "Consulte <0>configuración de notificaciones</0> para configurar cómo recibe alertas."
+msgstr "Consulta <0>configuración de notificaciones</0> para configurar cómo recibe alertas."
 
 #: src/components/routes/system.tsx
 msgid "Sent"
@@ -1090,7 +1094,7 @@ msgstr "Espacio de swap utilizado por el sistema"
 
 #: src/components/routes/system.tsx
 msgid "Swap Usage"
-msgstr "Uso de Swap"
+msgstr "Uso de swap"
 
 #: src/components/alerts-history-columns.tsx
 #: src/components/containers-table/containers-table-columns.tsx
@@ -1110,7 +1114,7 @@ msgstr "Sistemas"
 
 #: src/components/routes/settings/config-yaml.tsx
 msgid "Systems may be managed in a <0>config.yml</0> file inside your data directory."
-msgstr "Los sistemas pueden ser gestionados en un archivo <0>config.yml</0> dentro de su directorio de datos."
+msgstr "Los sistemas pueden ser gestionados en un archivo <0>config.yml</0> dentro de tu directorio de datos."
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Table"
@@ -1145,7 +1149,7 @@ msgstr "Notificación de prueba enviada"
 
 #: src/components/login/forgot-pass-form.tsx
 msgid "Then log into the backend and reset your user account password in the users table."
-msgstr "Luego inicie sesión en el backend y restablezca la contraseña de su cuenta de usuario en la tabla de usuarios."
+msgstr "Luego inicia sesión en el backend y restablece la contraseña de tu cuenta de usuario en la tabla de usuarios."
 
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "This action cannot be undone. This will permanently delete all current records for {name} from the database."
@@ -1189,7 +1193,7 @@ msgstr "Token"
 #: src/components/routes/settings/layout.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Tokens & Fingerprints"
-msgstr "Tokens y Huellas Digitales"
+msgstr "Tokens y huellas digitales"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Tokens allow agents to connect and register. Fingerprints are stable identifiers unique to each system, set on first connection."
@@ -1326,7 +1330,7 @@ msgstr "Ver más"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
-msgstr "Ver sus 200 alertas más recientes."
+msgstr "Ver tus 200 alertas más recientes."
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Visible Fields"
@@ -1338,7 +1342,7 @@ msgstr "Esperando suficientes registros para mostrar"
 
 #: src/components/routes/settings/general.tsx
 msgid "Want to help improve our translations? Check <0>Crowdin</0> for details."
-msgstr "¿Quieres ayudarnos a mejorar nuestras traducciones? Consulta <0>Crowdin</0> para más detalles."
+msgstr "¿Quieres ayudar a mejorar nuestras traducciones? Consulta <0>Crowdin</0> para más detalles."
 
 #: src/components/routes/settings/general.tsx
 msgid "Warning (%)"
@@ -1378,4 +1382,5 @@ msgstr "Configuración YAML"
 
 #: src/components/routes/settings/layout.tsx
 msgid "Your user settings have been updated."
-msgstr "Su configuración de usuario ha sido actualizada."
+msgstr "Tu configuración de usuario ha sido actualizada."
+
